manifests/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dojo
  labels:
    name: dojo

---

apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    name: monitoring

---

apiVersion: v1
kind: Namespace
metadata:
  name: load
  labels:
    name: load
