manifests/templates/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: NAMESPACE
spec:
  clusterIP: None
  selector:
    app: postgres
