manifests/templates/network-policy-user-info.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webserver-to-user-info
  namespace: dojo
spec:
  podSelector:
    matchLabels:
      app: user-info
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: flask-webserver
